--- a/Week1/MFADT_SimpleServerExample/index.html
+++ b/Week1/MFADT_SimpleServerExample/index.html
@@ -10,6 +10,6 @@
   <body>
     <main>
     </main>
-    <script src="sketch2.js"></script>
+    <script src="sketch.js"></script>
   </body>
 </html>
