--- a/Week7/index.html
+++ b/Week7/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto Mono" rel="stylesheet">
     <meta charset="utf-8" />
-
   </head>
   <body>
     <main>
+
     </main>
-    <script src="video_captureEllipse.js"></script>
+    <script src="js/image_pixel.js"></script>
   </body>
 </html>
