--- a/Week7/index.html
+++ b/Week7/index.html
@@ -5,12 +5,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=IBM Plex Mono" rel="stylesheet">
+
     <meta charset="utf-8" />
   </head>
   <body>
     <main>
-
+      <!-- Is Google your stream of conscience? -->
     </main>
-    <script src="js/image_pixel.js"></script>
+    <script src="js/test.js"></script>
   </body>
 </html>
