--- a/Week7/index.html
+++ b/Week7/index.html
@@ -13,6 +13,6 @@
     <main>
       <!-- Is Google your stream of conscience? -->
     </main>
-    <script src="js/1_array.js"></script>
+    <script src="js/test.js"></script>
   </body>
 </html>
